--- a/Onliner for windows 10/Onliner/Onliner.csproj
+++ b/Onliner for windows 10/Onliner/Onliner.csproj
@@ -129,23 +129,27 @@
     <Compile Include="Interface\News\INewsItems.cs" />
     <Compile Include="Model\Additionalinformation\Additionalinformation.cs" />
     <Compile Include="Model\Bestrate\BestrateRespose.cs" />
+    <Compile Include="Model\Bestrate\IBestrate.cs" />
     <Compile Include="Model\Catalog\Carts.cs" />
     <Compile Include="Model\Catalog\CategoryListViewModel.cs" />
     <Compile Include="Model\Catalog\ElectronicSection.cs" />
     <Compile Include="Model\DataTemplateSelector\ListViewItemSelector.cs" />
     <Compile Include="Model\DataTemplateSelector\ListViewItemSelectorModel.cs" />
-    <Compile Include="Model\JsonModel\Authorization\JsonParams.cs" />
+    <Compile Include="Model\JsonModel\Authorization\IAuthentication.cs" />
+    <Compile Include="Model\JsonModel\Authorization\Authentication.cs" />
     <Compile Include="Model\JsonModel\Message\MessageJson.cs" />
     <Compile Include="Model\JsonModel\Profile\EditProfileData.cs" />
+    <Compile Include="Model\JsonModel\Profile\IEditProfileData.cs" />
     <Compile Include="Model\JsonModel\Weather\WeatherJSon.cs" />
     <Compile Include="Model\LocalSetteing\LocalSettingParams.cs" />
     <Compile Include="Model\Message\IMessageModel.cs" />
     <Compile Include="Model\Message\MessageModel.cs" />
-    <Compile Include="Model\News\CategoryNews.cs" />
-    <Compile Include="Model\News\CommentsItem.cs" />
+    <Compile Include="Model\News\Comments.cs" />
     <Compile Include="Model\News\FullItemNews.cs" />
+    <Compile Include="Model\News\IComments.cs" />
     <Compile Include="Model\News\ItemsNews.cs" />
     <Compile Include="Model\OpinionsModel\OpinionModel.cs" />
+    <Compile Include="Model\ProfileModel\IProfileSearch.cs" />
     <Compile Include="Model\ProfileModel\ProfileData.cs" />
     <Compile Include="Model\ProfileModel\ProfileSearchModel.cs" />
     <Compile Include="ParsingHtml\ParsingFullNewsPage.cs" />
